// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BusinessHours component should render default values 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title="Business hours"
  />
  <Container
    className="pageContainer"
    fluid={true}
    tag="div"
  >
    <div
      className="body-regular contentWrapper"
    >
      <div
        className="mb32"
      >
        <p>
          Let customers know when your team is online.
          <br />
          This way, you can set different auto-responders in the rules based on when your team is working.
        </p>
        <p>
          The appearance of your
           
          <Link
            to="/app/settings/integrations/gorgias_chat"
          >
            Chat integrations
          </Link>
           
          will change when outside business hours.
        </p>
      </div>
      <Form
        onSubmit={[Function]}
        tag="form"
      >
        <Row
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <Col
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <div
              className="inputField mb32"
            >
              <Label
                className="control-label"
                tag="label"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                Business hours
              </Label>
              <div
                className="flex mb24"
                key="0"
              >
                <BusinessHoursForm
                  businessHour={
                    Immutable.Map {
                      "days": "1,2,3,4,5",
                      "from_time": "09:00",
                      "to_time": "17:00",
                    }
                  }
                  onChange={[Function]}
                />
                <div
                  className="deleteButton"
                  onClick={[Function]}
                >
                  <i
                    className="material-icons red"
                  >
                    clear
                  </i>
                </div>
              </div>
              <ForwardRef
                intent="secondary"
                onClick={[Function]}
              >
                <ButtonIconLabel
                  icon="add"
                >
                  Add business hours
                </ButtonIconLabel>
              </ForwardRef>
            </div>
            <InputField
              className="inputField mb40"
              label="Time zone"
              name="timezone"
              onChange={[Function]}
              type="select"
              value="UTC"
            >
              <option
                key="UTC"
                value="UTC"
              >
                UTC
              </option>
              <option
                key="US/Pacific"
                value="US/Pacific"
              >
                US/Pacific
              </option>
              <option
                key="Australia/AUR"
                value="Australia/AUR"
              >
                Australia/AUR
              </option>
            </InputField>
          </Col>
        </Row>
        <ForwardRef
          isDisabled={false}
          isLoading={false}
          type="submit"
        >
          Save changes
        </ForwardRef>
      </Form>
    </div>
  </Container>
</div>
`;

exports[`BusinessHours component should render values from state 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(BusinessHoursContainer)>
    <BusinessHoursContainer
      businessHoursSettings={
        Immutable.Map {
          "type": "business-hours",
          "data": Immutable.Map {
            "business_hours": Immutable.List [
              Immutable.Map {
                "days": "2",
                "from_time": "10:00",
                "to_time": "17:00",
              },
              Immutable.Map {
                "days": "4",
                "from_time": "11:00",
                "to_time": "17:00",
              },
            ],
            "timezone": "US/Pacific",
          },
        }
      }
      submitSetting={[Function]}
    >
      <div
        className="full-width"
      >
        <PageHeader
          title="Business hours"
        >
          <div
            className="page-header pageHeader"
          >
            <h1
              className="d-flex align-items-center"
            >
              Business hours
            </h1>
          </div>
        </PageHeader>
        <Container
          className="pageContainer"
          fluid={true}
          tag="div"
        >
          <div
            className="pageContainer container-fluid"
          >
            <div
              className="body-regular contentWrapper"
            >
              <div
                className="mb32"
              >
                <p>
                  Let customers know when your team is online.
                  <br />
                  This way, you can set different auto-responders in the rules based on when your team is working.
                </p>
                <p>
                  The appearance of your
                   
                  <Link
                    to="/app/settings/integrations/gorgias_chat"
                  >
                    <a
                      to="/app/settings/integrations/gorgias_chat"
                    >
                      Chat integrations
                    </a>
                  </Link>
                   
                  will change when outside business hours.
                </p>
              </div>
              <Form
                onSubmit={[Function]}
                tag="form"
              >
                <form
                  className=""
                  onSubmit={[Function]}
                >
                  <Row
                    tag="div"
                    widths={
                      Array [
                        "xs",
                        "sm",
                        "md",
                        "lg",
                        "xl",
                      ]
                    }
                  >
                    <div
                      className="row"
                    >
                      <Col
                        tag="div"
                        widths={
                          Array [
                            "xs",
                            "sm",
                            "md",
                            "lg",
                            "xl",
                          ]
                        }
                      >
                        <div
                          className="col"
                        >
                          <div
                            className="inputField mb32"
                          >
                            <Label
                              className="control-label"
                              tag="label"
                              widths={
                                Array [
                                  "xs",
                                  "sm",
                                  "md",
                                  "lg",
                                  "xl",
                                ]
                              }
                            >
                              <label
                                className="control-label"
                              >
                                Business hours
                              </label>
                            </Label>
                            <div
                              className="flex mb24"
                              key="0"
                            >
                              <BusinessHoursForm
                                businessHour={
                                  Immutable.Map {
                                    "days": "2",
                                    "from_time": "10:00",
                                    "to_time": "17:00",
                                  }
                                }
                                onChange={[Function]}
                              >
                                <div
                                  className="businessHoursInput"
                                >
                                  <SelectField
                                    allowCustomValue={false}
                                    fixedWidth={true}
                                    fullWidth={false}
                                    id={null}
                                    onChange={[Function]}
                                    onSearchChange={[Function]}
                                    options={
                                      Array [
                                        Object {
                                          "label": <i>
                                            Everyday
                                          </i>,
                                          "text": "Everyday",
                                          "value": "1,2,3,4,5,6,7",
                                        },
                                        Object {
                                          "label": <i>
                                            Weekdays
                                          </i>,
                                          "text": "Weekdays",
                                          "value": "1,2,3,4,5",
                                        },
                                        Object {
                                          "label": <i>
                                            Weekend
                                          </i>,
                                          "text": "Weekend",
                                          "value": "6,7",
                                        },
                                        Object {
                                          "label": "Monday",
                                          "value": "1",
                                        },
                                        Object {
                                          "label": "Tuesday",
                                          "value": "2",
                                        },
                                        Object {
                                          "label": "Wednesday",
                                          "value": "3",
                                        },
                                        Object {
                                          "label": "Thursday",
                                          "value": "4",
                                        },
                                        Object {
                                          "label": "Friday",
                                          "value": "5",
                                        },
                                        Object {
                                          "label": "Saturday",
                                          "value": "6",
                                        },
                                        Object {
                                          "label": "Sunday",
                                          "value": "7",
                                        },
                                      ]
                                    }
                                    placeholder="Select an option"
                                    required={false}
                                    singular="option"
                                    style={Object {}}
                                    value="2"
                                  >
                                    <div
                                      style={Object {}}
                                    >
                                      <UncontrolledDropdown
                                        isOpen={false}
                                        toggle={[Function]}
                                      >
                                        <Dropdown
                                          a11y={true}
                                          active={false}
                                          addonType={false}
                                          direction="down"
                                          inNavbar={false}
                                          isOpen={false}
                                          nav={false}
                                          setActiveFromChild={false}
                                          toggle={[Function]}
                                        >
                                          <Manager>
                                            <div
                                              className="dropdown"
                                              onKeyDown={[Function]}
                                            >
                                              <DropdownToggle
                                                aria-haspopup={true}
                                                color="secondary"
                                                data-toggle="dropdown"
                                                tag="div"
                                              >
                                                <Reference>
                                                  <InnerReference
                                                    setReferenceNode={[Function]}
                                                  >
                                                    <div
                                                      aria-expanded={false}
                                                      aria-haspopup={true}
                                                      className=""
                                                      data-toggle="dropdown"
                                                      onClick={[Function]}
                                                    >
                                                      <div
                                                        className="select dropdown-toggle"
                                                        onClick={[Function]}
                                                      >
                                                        <span
                                                          className="label"
                                                          style={
                                                            Object {
                                                              "minWidth": 82,
                                                              "opacity": 1,
                                                            }
                                                          }
                                                        >
                                                          Tuesday
                                                        </span>
                                                        <input
                                                          autoComplete="chrome-off"
                                                          className="input"
                                                          id={null}
                                                          onBlur={[Function]}
                                                          onChange={[Function]}
                                                          onFocus={[Function]}
                                                          onKeyDown={[Function]}
                                                          required={false}
                                                          style={
                                                            Object {
                                                              "minWidth": 82,
                                                            }
                                                          }
                                                          type="text"
                                                          value=""
                                                        />
                                                        <i
                                                          className="material-icons dropdownIcon"
                                                        >
                                                          arrow_drop_down
                                                        </i>
                                                      </div>
                                                    </div>
                                                  </InnerReference>
                                                </Reference>
                                              </DropdownToggle>
                                              <DropdownMenu
                                                className="options"
                                                flip={true}
                                                tag="div"
                                              >
                                                <div
                                                  aria-hidden={true}
                                                  className="options dropdown-menu"
                                                  role="menu"
                                                  tabIndex="-1"
                                                >
                                                  <DropdownItem
                                                    className="option option--focused"
                                                    onClick={[Function]}
                                                    onMouseEnter={[Function]}
                                                    tag="button"
                                                    toggle={true}
                                                    type="button"
                                                  >
                                                    <button
                                                      className="option option--focused dropdown-item"
                                                      onClick={[Function]}
                                                      onMouseEnter={[Function]}
                                                      role="menuitem"
                                                      tabIndex="0"
                                                      type="button"
                                                    >
                                                      <span>
                                                        <i>
                                                          Everyday
                                                        </i>
                                                      </span>
                                                    </button>
                                                  </DropdownItem>
                                                  <DropdownItem
                                                    className="option"
                                                    onClick={[Function]}
                                                    onMouseEnter={[Function]}
                                                    tag="button"
                                                    toggle={true}
                                                    type="button"
                                                  >
                                                    <button
                                                      className="option dropdown-item"
                                                      onClick={[Function]}
                                                      onMouseEnter={[Function]}
                                                      role="menuitem"
                                                      tabIndex="0"
                                                      type="button"
                                                    >
                                                      <span>
                                                        <i>
                                                          Weekdays
                                                        </i>
                                                      </span>
                                                    </button>
                                                  </DropdownItem>
                                                  <DropdownItem
                                                    className="option"
                                                    onClick={[Function]}
                                                    onMouseEnter={[Function]}
                                                    tag="button"
                                                    toggle={true}
                                                    type="button"
                                                  >
                                                    <button
                                                      className="option dropdown-item"
                                                      onClick={[Function]}
                                                      onMouseEnter={[Function]}
                                                      role="menuitem"
                                                      tabIndex="0"
                                                      type="button"
                                                    >
                                                      <span>
                                                        <i>
                                                          Weekend
                                                        </i>
                                                      </span>
                                                    </button>
                                                  </DropdownItem>
                                                  <DropdownItem
                                                    className="option"
                                                    onClick={[Function]}
                                                    onMouseEnter={[Function]}
                                                    tag="button"
                                                    toggle={true}
                                                    type="button"
                                                  >
                                                    <button
                                                      className="option dropdown-item"
                                                      onClick={[Function]}
                                                      onMouseEnter={[Function]}
                                                      role="menuitem"
                                                      tabIndex="0"
                                                      type="button"
                                                    >
                                                      <span>
                                                        Monday
                                                      </span>
                                                    </button>
                                                  </DropdownItem>
                                                  <DropdownItem
                                                    className="option"
                                                    onClick={[Function]}
                                                    onMouseEnter={[Function]}
                                                    tag="button"
                                                    toggle={true}
                                                    type="button"
                                                  >
                                                    <button
                                                      className="option dropdown-item"
                                                      onClick={[Function]}
                                                      onMouseEnter={[Function]}
                                                      role="menuitem"
                                                      tabIndex="0"
                                                      type="button"
                                                    >
                                                      <span>
                                                        Wednesday
                                                      </span>
                                                    </button>
                                                  </DropdownItem>
                                                  <DropdownItem
                                                    className="option"
                                                    onClick={[Function]}
                                                    onMouseEnter={[Function]}
                                                    tag="button"
                                                    toggle={true}
                                                    type="button"
                                                  >
                                                    <button
                                                      className="option dropdown-item"
                                                      onClick={[Function]}
                                                      onMouseEnter={[Function]}
                                                      role="menuitem"
                                                      tabIndex="0"
                                                      type="button"
                                                    >
                                                      <span>
                                                        Thursday
                                                      </span>
                                                    </button>
                                                  </DropdownItem>
                                                  <DropdownItem
                                                    className="option"
                                                    onClick={[Function]}
                                                    onMouseEnter={[Function]}
                                                    tag="button"
                                                    toggle={true}
                                                    type="button"
                                                  >
                                                    <button
                                                      className="option dropdown-item"
                                                      onClick={[Function]}
                                                      onMouseEnter={[Function]}
                                                      role="menuitem"
                                                      tabIndex="0"
                                                      type="button"
                                                    >
                                                      <span>
                                                        Friday
                                                      </span>
                                                    </button>
                                                  </DropdownItem>
                                                  <DropdownItem
                                                    className="option"
                                                    onClick={[Function]}
                                                    onMouseEnter={[Function]}
                                                    tag="button"
                                                    toggle={true}
                                                    type="button"
                                                  >
                                                    <button
                                                      className="option dropdown-item"
                                                      onClick={[Function]}
                                                      onMouseEnter={[Function]}
                                                      role="menuitem"
                                                      tabIndex="0"
                                                      type="button"
                                                    >
                                                      <span>
                                                        Saturday
                                                      </span>
                                                    </button>
                                                  </DropdownItem>
                                                  <DropdownItem
                                                    className="option"
                                                    onClick={[Function]}
                                                    onMouseEnter={[Function]}
                                                    tag="button"
                                                    toggle={true}
                                                    type="button"
                                                  >
                                                    <button
                                                      className="option dropdown-item"
                                                      onClick={[Function]}
                                                      onMouseEnter={[Function]}
                                                      role="menuitem"
                                                      tabIndex="0"
                                                      type="button"
                                                    >
                                                      <span>
                                                        Sunday
                                                      </span>
                                                    </button>
                                                  </DropdownItem>
                                                </div>
                                              </DropdownMenu>
                                            </div>
                                          </Manager>
                                        </Dropdown>
                                      </UncontrolledDropdown>
                                    </div>
                                  </SelectField>
                                  <Input
                                    className="timeField"
                                    name="fromTime"
                                    onChange={[Function]}
                                    pattern="[0-9][0-9]:[0-9][0-9]"
                                    type="time"
                                    value="10:00"
                                  >
                                    <input
                                      className="timeField form-control"
                                      name="fromTime"
                                      onChange={[Function]}
                                      pattern="[0-9][0-9]:[0-9][0-9]"
                                      type="time"
                                      value="10:00"
                                    />
                                  </Input>
                                  <p>
                                    to
                                  </p>
                                  <Input
                                    className="timeField"
                                    name="toTime"
                                    onChange={[Function]}
                                    pattern="[0-9][0-9]:[0-9][0-9]"
                                    type="time"
                                    value="17:00"
                                  >
                                    <input
                                      className="timeField form-control"
                                      name="toTime"
                                      onChange={[Function]}
                                      pattern="[0-9][0-9]:[0-9][0-9]"
                                      type="time"
                                      value="17:00"
                                    />
                                  </Input>
                                </div>
                              </BusinessHoursForm>
                              <div
                                className="deleteButton"
                                onClick={[Function]}
                              >
                                <i
                                  className="material-icons red"
                                >
                                  clear
                                </i>
                              </div>
                            </div>
                            <div
                              className="flex mb24"
                              key="1"
                            >
                              <BusinessHoursForm
                                businessHour={
                                  Immutable.Map {
                                    "days": "4",
                                    "from_time": "11:00",
                                    "to_time": "17:00",
                                  }
                                }
                                onChange={[Function]}
                              >
                                <div
                                  className="businessHoursInput"
                                >
                                  <SelectField
                                    allowCustomValue={false}
                                    fixedWidth={true}
                                    fullWidth={false}
                                    id={null}
                                    onChange={[Function]}
                                    onSearchChange={[Function]}
                                    options={
                                      Array [
                                        Object {
                                          "label": <i>
                                            Everyday
                                          </i>,
                                          "text": "Everyday",
                                          "value": "1,2,3,4,5,6,7",
                                        },
                                        Object {
                                          "label": <i>
                                            Weekdays
                                          </i>,
                                          "text": "Weekdays",
                                          "value": "1,2,3,4,5",
                                        },
                                        Object {
                                          "label": <i>
                                            Weekend
                                          </i>,
                                          "text": "Weekend",
                                          "value": "6,7",
                                        },
                                        Object {
                                          "label": "Monday",
                                          "value": "1",
                                        },
                                        Object {
                                          "label": "Tuesday",
                                          "value": "2",
                                        },
                                        Object {
                                          "label": "Wednesday",
                                          "value": "3",
                                        },
                                        Object {
                                          "label": "Thursday",
                                          "value": "4",
                                        },
                                        Object {
                                          "label": "Friday",
                                          "value": "5",
                                        },
                                        Object {
                                          "label": "Saturday",
                                          "value": "6",
                                        },
                                        Object {
                                          "label": "Sunday",
                                          "value": "7",
                                        },
                                      ]
                                    }
                                    placeholder="Select an option"
                                    required={false}
                                    singular="option"
                                    style={Object {}}
                                    value="4"
                                  >
                                    <div
                                      style={Object {}}
                                    >
                                      <UncontrolledDropdown
                                        isOpen={false}
                                        toggle={[Function]}
                                      >
                                        <Dropdown
                                          a11y={true}
                                          active={false}
                                          addonType={false}
                                          direction="down"
                                          inNavbar={false}
                                          isOpen={false}
                                          nav={false}
                                          setActiveFromChild={false}
                                          toggle={[Function]}
                                        >
                                          <Manager>
                                            <div
                                              className="dropdown"
                                              onKeyDown={[Function]}
                                            >
                                              <DropdownToggle
                                                aria-haspopup={true}
                                                color="secondary"
                                                data-toggle="dropdown"
                                                tag="div"
                                              >
                                                <Reference>
                                                  <InnerReference
                                                    setReferenceNode={[Function]}
                                                  >
                                                    <div
                                                      aria-expanded={false}
                                                      aria-haspopup={true}
                                                      className=""
                                                      data-toggle="dropdown"
                                                      onClick={[Function]}
                                                    >
                                                      <div
                                                        className="select dropdown-toggle"
                                                        onClick={[Function]}
                                                      >
                                                        <span
                                                          className="label"
                                                          style={
                                                            Object {
                                                              "minWidth": 82,
                                                              "opacity": 1,
                                                            }
                                                          }
                                                        >
                                                          Thursday
                                                        </span>
                                                        <input
                                                          autoComplete="chrome-off"
                                                          className="input"
                                                          id={null}
                                                          onBlur={[Function]}
                                                          onChange={[Function]}
                                                          onFocus={[Function]}
                                                          onKeyDown={[Function]}
                                                          required={false}
                                                          style={
                                                            Object {
                                                              "minWidth": 82,
                                                            }
                                                          }
                                                          type="text"
                                                          value=""
                                                        />
                                                        <i
                                                          className="material-icons dropdownIcon"
                                                        >
                                                          arrow_drop_down
                                                        </i>
                                                      </div>
                                                    </div>
                                                  </InnerReference>
                                                </Reference>
                                              </DropdownToggle>
                                              <DropdownMenu
                                                className="options"
                                                flip={true}
                                                tag="div"
                                              >
                                                <div
                                                  aria-hidden={true}
                                                  className="options dropdown-menu"
                                                  role="menu"
                                                  tabIndex="-1"
                                                >
                                                  <DropdownItem
                                                    className="option option--focused"
                                                    onClick={[Function]}
                                                    onMouseEnter={[Function]}
                                                    tag="button"
                                                    toggle={true}
                                                    type="button"
                                                  >
                                                    <button
                                                      className="option option--focused dropdown-item"
                                                      onClick={[Function]}
                                                      onMouseEnter={[Function]}
                                                      role="menuitem"
                                                      tabIndex="0"
                                                      type="button"
                                                    >
                                                      <span>
                                                        <i>
                                                          Everyday
                                                        </i>
                                                      </span>
                                                    </button>
                                                  </DropdownItem>
                                                  <DropdownItem
                                                    className="option"
                                                    onClick={[Function]}
                                                    onMouseEnter={[Function]}
                                                    tag="button"
                                                    toggle={true}
                                                    type="button"
                                                  >
                                                    <button
                                                      className="option dropdown-item"
                                                      onClick={[Function]}
                                                      onMouseEnter={[Function]}
                                                      role="menuitem"
                                                      tabIndex="0"
                                                      type="button"
                                                    >
                                                      <span>
                                                        <i>
                                                          Weekdays
                                                        </i>
                                                      </span>
                                                    </button>
                                                  </DropdownItem>
                                                  <DropdownItem
                                                    className="option"
                                                    onClick={[Function]}
                                                    onMouseEnter={[Function]}
                                                    tag="button"
                                                    toggle={true}
                                                    type="button"
                                                  >
                                                    <button
                                                      className="option dropdown-item"
                                                      onClick={[Function]}
                                                      onMouseEnter={[Function]}
                                                      role="menuitem"
                                                      tabIndex="0"
                                                      type="button"
                                                    >
                                                      <span>
                                                        <i>
                                                          Weekend
                                                        </i>
                                                      </span>
                                                    </button>
                                                  </DropdownItem>
                                                  <DropdownItem
                                                    className="option"
                                                    onClick={[Function]}
                                                    onMouseEnter={[Function]}
                                                    tag="button"
                                                    toggle={true}
                                                    type="button"
                                                  >
                                                    <button
                                                      className="option dropdown-item"
                                                      onClick={[Function]}
                                                      onMouseEnter={[Function]}
                                                      role="menuitem"
                                                      tabIndex="0"
                                                      type="button"
                                                    >
                                                      <span>
                                                        Monday
                                                      </span>
                                                    </button>
                                                  </DropdownItem>
                                                  <DropdownItem
                                                    className="option"
                                                    onClick={[Function]}
                                                    onMouseEnter={[Function]}
                                                    tag="button"
                                                    toggle={true}
                                                    type="button"
                                                  >
                                                    <button
                                                      className="option dropdown-item"
                                                      onClick={[Function]}
                                                      onMouseEnter={[Function]}
                                                      role="menuitem"
                                                      tabIndex="0"
                                                      type="button"
                                                    >
                                                      <span>
                                                        Tuesday
                                                      </span>
                                                    </button>
                                                  </DropdownItem>
                                                  <DropdownItem
                                                    className="option"
                                                    onClick={[Function]}
                                                    onMouseEnter={[Function]}
                                                    tag="button"
                                                    toggle={true}
                                                    type="button"
                                                  >
                                                    <button
                                                      className="option dropdown-item"
                                                      onClick={[Function]}
                                                      onMouseEnter={[Function]}
                                                      role="menuitem"
                                                      tabIndex="0"
                                                      type="button"
                                                    >
                                                      <span>
                                                        Wednesday
                                                      </span>
                                                    </button>
                                                  </DropdownItem>
                                                  <DropdownItem
                                                    className="option"
                                                    onClick={[Function]}
                                                    onMouseEnter={[Function]}
                                                    tag="button"
                                                    toggle={true}
                                                    type="button"
                                                  >
                                                    <button
                                                      className="option dropdown-item"
                                                      onClick={[Function]}
                                                      onMouseEnter={[Function]}
                                                      role="menuitem"
                                                      tabIndex="0"
                                                      type="button"
                                                    >
                                                      <span>
                                                        Friday
                                                      </span>
                                                    </button>
                                                  </DropdownItem>
                                                  <DropdownItem
                                                    className="option"
                                                    onClick={[Function]}
                                                    onMouseEnter={[Function]}
                                                    tag="button"
                                                    toggle={true}
                                                    type="button"
                                                  >
                                                    <button
                                                      className="option dropdown-item"
                                                      onClick={[Function]}
                                                      onMouseEnter={[Function]}
                                                      role="menuitem"
                                                      tabIndex="0"
                                                      type="button"
                                                    >
                                                      <span>
                                                        Saturday
                                                      </span>
                                                    </button>
                                                  </DropdownItem>
                                                  <DropdownItem
                                                    className="option"
                                                    onClick={[Function]}
                                                    onMouseEnter={[Function]}
                                                    tag="button"
                                                    toggle={true}
                                                    type="button"
                                                  >
                                                    <button
                                                      className="option dropdown-item"
                                                      onClick={[Function]}
                                                      onMouseEnter={[Function]}
                                                      role="menuitem"
                                                      tabIndex="0"
                                                      type="button"
                                                    >
                                                      <span>
                                                        Sunday
                                                      </span>
                                                    </button>
                                                  </DropdownItem>
                                                </div>
                                              </DropdownMenu>
                                            </div>
                                          </Manager>
                                        </Dropdown>
                                      </UncontrolledDropdown>
                                    </div>
                                  </SelectField>
                                  <Input
                                    className="timeField"
                                    name="fromTime"
                                    onChange={[Function]}
                                    pattern="[0-9][0-9]:[0-9][0-9]"
                                    type="time"
                                    value="11:00"
                                  >
                                    <input
                                      className="timeField form-control"
                                      name="fromTime"
                                      onChange={[Function]}
                                      pattern="[0-9][0-9]:[0-9][0-9]"
                                      type="time"
                                      value="11:00"
                                    />
                                  </Input>
                                  <p>
                                    to
                                  </p>
                                  <Input
                                    className="timeField"
                                    name="toTime"
                                    onChange={[Function]}
                                    pattern="[0-9][0-9]:[0-9][0-9]"
                                    type="time"
                                    value="17:00"
                                  >
                                    <input
                                      className="timeField form-control"
                                      name="toTime"
                                      onChange={[Function]}
                                      pattern="[0-9][0-9]:[0-9][0-9]"
                                      type="time"
                                      value="17:00"
                                    />
                                  </Input>
                                </div>
                              </BusinessHoursForm>
                              <div
                                className="deleteButton"
                                onClick={[Function]}
                              >
                                <i
                                  className="material-icons red"
                                >
                                  clear
                                </i>
                              </div>
                            </div>
                            <ForwardRef
                              intent="secondary"
                              onClick={[Function]}
                            >
                              <button
                                className="wrapper fill secondary medium"
                                onClick={[Function]}
                                type="button"
                              >
                                <ButtonIconLabel
                                  icon="add"
                                >
                                  <span
                                    className="wrapper"
                                  >
                                    <Icon
                                      className="icon isLeft"
                                    >
                                      <i
                                        className="material-icons icon isLeft medium"
                                      >
                                        add
                                      </i>
                                    </Icon>
                                    Add business hours
                                  </span>
                                </ButtonIconLabel>
                              </button>
                            </ForwardRef>
                          </div>
                          <InputField
                            className="inputField mb40"
                            label="Time zone"
                            name="timezone"
                            onChange={[Function]}
                            type="select"
                            value="US/Pacific"
                          >
                            <FormGroup
                              className="InputField inputField mb40"
                              color=""
                              tag="div"
                            >
                              <div
                                className="InputField inputField mb40 form-group"
                                color=""
                              >
                                <Label
                                  className="control-label"
                                  htmlFor="id-timezone"
                                  tag="label"
                                  widths={
                                    Array [
                                      "xs",
                                      "sm",
                                      "md",
                                      "lg",
                                      "xl",
                                    ]
                                  }
                                >
                                  <label
                                    className="control-label"
                                    htmlFor="id-timezone"
                                  >
                                    Time zone
                                  </label>
                                </Label>
                                <div
                                  className=""
                                >
                                  <Input
                                    className="field"
                                    id="id-timezone"
                                    onChange={[Function]}
                                    type="select"
                                    value="US/Pacific"
                                  >
                                    <select
                                      className="field form-control"
                                      id="id-timezone"
                                      onChange={[Function]}
                                      value="US/Pacific"
                                    >
                                      <option
                                        key="UTC"
                                        value="UTC"
                                      >
                                        UTC
                                      </option>
                                      <option
                                        key="US/Pacific"
                                        value="US/Pacific"
                                      >
                                        US/Pacific
                                      </option>
                                      <option
                                        key="Australia/AUR"
                                        value="Australia/AUR"
                                      >
                                        Australia/AUR
                                      </option>
                                    </select>
                                  </Input>
                                </div>
                              </div>
                            </FormGroup>
                          </InputField>
                        </div>
                      </Col>
                    </div>
                  </Row>
                  <ForwardRef
                    isDisabled={false}
                    isLoading={false}
                    type="submit"
                  >
                    <button
                      className="wrapper fill primary medium"
                      disabled={false}
                      type="submit"
                    >
                      Save changes
                    </button>
                  </ForwardRef>
                </form>
              </Form>
            </div>
          </div>
        </Container>
      </div>
    </BusinessHoursContainer>
  </Connect(BusinessHoursContainer)>
</Provider>
`;
